bdd/custom_resources/ingress.basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basic
spec:
  ingressClassName: "test.01.ingressclass"
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
---
# example ingress class resource
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: test.01.ingressclass
spec:
  # this ingress class is managed by tyk-operator
  controller: tyk.io/tyk-operator
  parameters:
    apiGroup: tyk.tyk.io
    kind: ApiDefinition
    name: http-ingress-template
